# summary_bot_opensource

./: .gitignore  ARCHITECTURE.md  CONTRIBUTORS.md  DEBUGGING.md  DEPLOY.md  Dockerfile  README.md  deploy-to-local-docker.sh  docker-compose.yaml  entrypoint.sh  fly-set-secrets.ps1  fly.toml  pyproject.toml  task_list.json
diagnostics/: fly-env-check.sh
src/: TODO.md  ai_chunking.py  async_lru_cache.py  constants.py  debug.py  debug_app.py  export_formatter.py  fly.toml.old  history.py  main.py  openai_summarizer.py  summary.py  summary_for_webhook.py  tagged_channels.py  task_list.py  tasks_beaverworx.py  webhook.py
src/test/: call-webhook1.py  pydrive_setup.py  three-day-summarizer.py
src/webhook-services/: discord_summary.py
tests/: test_tasks_beaverworx.py
